--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Календарь</title>
 <link rel="stylesheet" href="styles.css">
+<link rel="icon" href="favicon.ico" type="image/x-icon">
 </head><body><!-- Модальное окно авторизации при входе -->
 <div id="login-modal" class="modal" style="display: flex;">
     <div class="modal-content">
@@ -188,3 +189,4 @@
 <!-- Основной скрипт -->
 <script src="app.js"></script>
 </body></html>
+
